--- a/package.json
+++ b/package.json
@@ -5,20 +5,32 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "axios": "^1.6.0",
     "next": "14.2.16",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/devkit": "20.3.2",
     "@nx/eslint": "20.3.2",
     "@nx/eslint-plugin": "20.3.2",
     "@nx/jest": "20.3.2",
     "@nx/js": "20.3.2",
+    "@nx/nest": "^20.3.2",
     "@nx/next": "20.3.2",
+    "@nx/node": "20.3.2",
     "@nx/playwright": "20.3.2",
+    "@nx/web": "20.3.2",
+    "@nx/webpack": "20.3.2",
     "@nx/workspace": "20.3.2",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
@@ -41,6 +53,7 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "nx": "20.3.2",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
@@ -49,6 +62,7 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.13.0"
+    "typescript-eslint": "^8.13.0",
+    "webpack-cli": "^5.1.4"
   }
 }
