--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@fastify/helmet": "^11.1.1",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-fastify": "^10.0.2",
     "axios": "^1.6.0",
-    "next": "14.2.16",
+    "next": "15.1.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "reflect-metadata": "^0.1.13",
@@ -44,7 +46,7 @@
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
-    "eslint-config-next": "14.2.16",
+    "eslint-config-next": "15.1.5",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
