feat: add ui login, signup and dashboard setup for components, api and hooks

--- a/apps/ui/tsconfig.json
+++ b/apps/ui/tsconfig.json
@@ -27,7 +27,10 @@
     "types": [
       "jest",
       "node"
-    ]
+    ],
+    "paths": {
+      "@/*": ["./apps/ui/*"]
+    },
   },
   "include": [
     "**/*.ts",
