--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mongoose": "^11.0.0",
     "@nestjs/passport": "^11.0.4",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/platform-fastify": "^10.0.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tanstack/react-query": "^5.64.2",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "mongoose": "^8.9.5",
     "next": "15.1.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
