--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@fastify/cookie": "^9.4.0",
     "@fastify/helmet": "^11.1.1",
+    "@fastify/passport": "^2.4.0",
+    "@fastify/session": "^10.9.0",
     "@hookform/resolvers": "^3.10.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
