--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@fastify/cookie": "^9.4.0",
-    "@fastify/helmet": "^11.1.1",
     "@fastify/passport": "^2.4.0",
-    "@fastify/session": "^10.9.0",
     "@hookform/resolvers": "^3.10.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
@@ -27,6 +24,8 @@
     "class-validator": "^0.14.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "express-session": "^1.18.1",
+    "helmet": "^8.0.0",
     "mongoose": "^8.9.5",
     "next": "15.1.5",
     "passport": "^0.7.0",
@@ -62,10 +61,9 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "15.0.6",
+    "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/passport-local": "^1.0.38",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.13",
