--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "class-validator": "^0.14.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookie-parser": "^1.4.7",
     "express-session": "^1.18.1",
     "helmet": "^8.0.0",
     "mongoose": "^8.9.5",
+    "nestjs-pino": "^4.3.0",
     "next": "15.1.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pino-pretty": "^13.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-error-boundary": "^5.0.0",
